Add view AllBookings for logged users

--- a/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
+++ b/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
@@ -4,7 +4,6 @@
     this.ViewData["Title"] = "Property";
    
 }
-
 <link href="~/css/bookForm.css" rel="stylesheet" />
 
 <div id="booking" class="section">
@@ -40,17 +39,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <select class="form-control" >
-                                        <option value="" selected hidden>no of rooms</option>
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                    </select> <span class="select-arrow"></span> <span class="form-label">Rooms</span>
-                                </div>
-                            </div>
+                        <div class="row">                            
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <select class="form-control" >
@@ -84,7 +73,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-btn"> <button class="submit-btn">Book Now</button> </div>
+                        <div class="form-btn"> <button class="submit-btn bg-primary">Book Now</button> </div>
                     </form>
                 </div>
             </div>
