--- a/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Contacts" asp-action="Contact">Contact Us</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Bookings" asp-action="AllBookings">My Bookings</a>
+                            </li>
 
                         }
                         @if (this.User.IsInRole("Administrator"))
@@ -70,39 +73,8 @@
         </main>
     </div>
 
-        @*<footer class="footer-1 bg-light text-dark">
-            <div class="container">
-                <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
-                    <div class="links">
-                        <ul class="footer-menu list-unstyled d-flex flex-row text-center text-md-left">
-
-                            <li><a href="https://bootstrapbay.com/about" target="_blank">About Us</a></li>
-                            <li><a href="https://bootstrapbay.com/blog/" target="_blank">Blog</a></li>
-                            <li><a href="https://bootstrapbay.com/terms" target="_blank">Terms & Conditions</a></li>
-                        </ul>
-                    </div>
-                    <div class="social mt-4 mt-md-0">
-                        <a class="twitter btn btn-outline-primary btn-icon" href="https://twitter.com/bootstrapbay" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                            <span class="sr-only">View our Twitter Profile</span>
-                        </a>
-                        <a class="facebook btn btn-outline-primary btn-icon" href="https://www.facebook.com/bootstrapbayofficial/" target="_blank">
-                            <i class="fab fa-facebook"></i>
-                            <span class="sr-only">
-                                View our Facebook Profile
-                                <span>
-                        </a>
-                        <a class="github btn btn-outline-primary btn-icon" href="https://github.com/bootstrapbay" target="_blank">
-                            <i class="fab fa-github"></i>
-                            <span class="sr-only">View our GitHub Profile</span>
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-        </footer>*@
     <!-- Footer -->
-    <partial name="_PartialFooter" />
+    <partial name="_FooterPartial" />
 
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
