--- a/Web/EasyTravel.Web/wwwroot/css/bookForm.css
+++ b/Web/EasyTravel.Web/wwwroot/css/bookForm.css
@@ -1,5 +1,6 @@
-﻿body {
-    background-image: linear-gradient(to right, #7B1FA2, #E91E63)
+﻿
+body {
+    background-color: white;
 }
 
 .section {
@@ -169,7 +170,7 @@
 
     .booking-form .submit-btn {
         color: #fff;
-        background-color: #e35e0a;
+        background-color: #b200ff;
         font-weight: 700;
         height: 60px;
         padding: 10px 30px;
