Implement paging , add new viewModel and partialview

--- a/Web/EasyTravel.Web/Views/Bookings/AllBookings.cshtml
+++ b/Web/EasyTravel.Web/Views/Bookings/AllBookings.cshtml
@@ -19,7 +19,7 @@
                 <ol>
                     <li>Choose a city.</li>
                     <li>Find a property.</li>
-                    <li>Pick date.</li>
+                    <li>Pick a date.</li>
                 </ol>
             </div>
             <div class="about_text_2">
