--- a/Web/EasyTravel.Web/Views/Shared/_PartialPropertiesInListViewModel.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_PartialPropertiesInListViewModel.cshtml
@@ -24,4 +24,9 @@
             </div>
         </div>
     </div>
+
 }
+
+<div class="col-md-12 mt-5" >
+    <partial name="_PagingPartial" model="@Model" />
+</div>
