Scaffold administration for the bookings and add some changes

--- a/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Index.cshtml
+++ b/Web/EasyTravel.Web/Areas/Administration/Views/ContactForms/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Messages";
 }
 
-<h1>User's Messages</h1>
+<h1>All Messages</h1>
 <br />
 
 <table class="table table-responsive table-striped">
