--- a/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
+++ b/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
@@ -39,41 +39,42 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">                            
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <select class="form-control" >
-                                        <option value="" selected hidden>no of adults</option>
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                    </select> <span class="select-arrow"></span> <span class="form-label">Adults</span>
+                        <div class="col-md-8">
+                            <div class="form-group">
+                                <label asp-for="@this.Model.PeopleCount"></label>
+                                <input asp-for="@this.Model.PeopleCount" class="form-control" />
+                                <span asp-validation-for="@this.Model.PeopleCount" class="text-danger"></span>
+                            </div>
+                            </div>
+                            @*<div class="row">
+                <div class="col-md-8">
+                    <div class="form-group">
+                        <select class="form-control" asp-for="@this.Model.PeopleCount">
+                            <option value="" selected hidden>no of adults</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select> <span class="select-arrow"></span> <span class="form-label">Adults</span>
+                        <span asp-validation-for="@this.Model.PeopleCount" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>*@
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input asp-for="@this.Model.UserEmail" class="form-control" type="email" placeholder="Enter your Email"> <span class="form-label">Email</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input class="form-control" type="tel" placeholder="Enter you Phone">
+                                        <span class="form-label">Phone</span>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <select class="form-control" >
-                                        <option value="" selected hidden>no of children</option>
-                                        <option>0</option>
-                                        <option>1</option>
-                                        <option>2</option>
-                                    </select> <span class="select-arrow"></span> <span class="form-label">Children</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group"> 
-                                 <input asp-for="@this.Model.UserEmail" class="form-control" type="email" placeholder="Enter your Email"> <span class="form-label">Email</span> </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input class="form-control" type="tel" placeholder="Enter you Phone">
-                                    <span class="form-label">Phone</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-btn"> <button class="submit-btn bg-primary">Book Now</button> </div>
+                            <div class="form-btn"> <button class="submit-btn bg-primary">Book Now</button> </div>
                     </form>
                 </div>
             </div>
