Implement some bootstrap items

--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -118,9 +118,9 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="feature">
-                        <div class="big-icon text-secondary"><i class="fas fa-puzzle-piece"></i></div>
-                        <h5 class="text-secondary">Mix & Match</h5>
-                        <p class="lead">Lazy Kit comes with a variety of different components and sections. By fitting them together you can easily create your desired pages.</p>
+                        <div class="big-icon text-secondary"><i class="fas fa-hotel"></i></div>
+                        <h5 class="text-secondary">Range of Houses and Apartments</h5>
+                        <p class="lead">An assortment of the most popular places from all popular suppliers, including exclusive houses. If you don't find one, just ask us.</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
