--- a/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
+++ b/Web/EasyTravel.Web/Views/Bookings/CreateBooking.cshtml
@@ -8,7 +8,7 @@
 
 <div id="booking" class="section">
     <div class="section-center">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="booking-form">
                     <div class="form-header">
@@ -17,22 +17,22 @@
                   
                     <form method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="@this.Model.PropName"></label>
-                            <input asp-for="@this.Model.PropName" class="form-control" />
-                            <span asp-validation-for="@this.Model.PropName" class="text-danger"></span>
+                        <div class="form-group text-white">
+                            <label asp-for="@this.Model.PropertyName"></label>
+                            <input asp-for="@this.Model.PropertyName" class="form-control" />
+                            <span asp-validation-for="@this.Model.PropertyName" class="text-danger"></span>
                         </div>
 
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group text-white">
                                     <label asp-for="@this.Model.CheckIn"></label>
                                     <input asp-for="@this.Model.CheckIn" class="form-control" type="date" required>
                                     <span asp-validation-for="@this.Model.CheckIn" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group text-white">
                                     <label asp-for="@this.Model.CheckOut"></label>
                                     <input asp-for="@this.Model.CheckOut" class="form-control" type="date" required>
                                     <span asp-validation-for="@this.Model.CheckOut" class="text-danger"></span>
@@ -40,35 +40,21 @@
                             </div>
                         </div>
                         <div class="col-md-8">
-                            <div class="form-group">
+                            <div class="form-group text-white">
                                 <label asp-for="@this.Model.PeopleCount"></label>
-                                <input asp-for="@this.Model.PeopleCount" class="form-control" />
+                                <input asp-for="@this.Model.PeopleCount" class="form-control" required>
                                 <span asp-validation-for="@this.Model.PeopleCount" class="text-danger"></span>
                             </div>
                             </div>
-                            @*<div class="row">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <select class="form-control" asp-for="@this.Model.PeopleCount">
-                            <option value="" selected hidden>no of adults</option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select> <span class="select-arrow"></span> <span class="form-label">Adults</span>
-                        <span asp-validation-for="@this.Model.PeopleCount" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>*@
+                     
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="form-group">
+                                    <div class="form-group text-white">
                                         <input asp-for="@this.Model.UserEmail" class="form-control" type="email" placeholder="Enter your Email"> <span class="form-label">Email</span>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group">
+                                    <div class="form-group text-white">
                                         <input class="form-control" type="tel" placeholder="Enter you Phone">
                                         <span class="form-label">Phone</span>
                                     </div>
