--- a/Web/EasyTravel.Web/Views/Properties/ById.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/ById.cshtml
@@ -109,7 +109,7 @@
                 <span><i class="fas fa-plane"></i></span>
             </div>
             <div class="email mt-1">
-                <span><a asp-controller="Bookings" asp-action="CreateBooking" asp-route-id="@this.Model.Id">Book Now</a></span>
+                <span><a asp-controller="Bookings" asp-action="CreateBooking" asp-route-id="@this.Model.Id" class="btn btn-primary">Book Now</a></span>
                 <div class="dummytext mt-1"> <span>Make your reservation with 1 step</span> </div>
             </div>
             <div class="d-flex flex row align-items-center mr-2 mt-2">
@@ -122,10 +122,10 @@
 
         <br />
         <div class="card p-2">
-            <div class="d-flex p-1 px-4 align-items-center"> <span class="square3"><img src="https://i.imgur.com/eSSe3Js.png" height="20" width="20" /></span> </div>
+            <div class="d-flex p-1 px-4 align-items-center"> <span class="square3"><i class="fas fa-laptop"></i></span> </div>
             <div class="email mt-1">
-                <span>See the original article</span>
-                <div class="dummytext mt-1"> <span>Информацията за всички обяви е взета от Pochivka.bg</span> </div>
+                <span>Информацията за всички обяви е взета от Pochivka.bg</span>
+                <div class="dummytext mt-1">  </div>
             </div>
             <div class="d-flex flex row align-items-center mr-2 mt-2">
                 <div class="icons"> <i class="fa fa-check-circle"></i> <span>Приложението е направено с учебни цели</span> </div>
