--- a/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
                                     <a class="dropdown-item" asp-area="Administration" asp-controller="ContactForms" asp-action="Index">Messages</a>
-                                    <a class="dropdown-item" asp-area="Administration" asp-controller="Bookings" asp-action="Index">All Bookings</a>                                 
+                                    <a class="dropdown-item" asp-area="Administration" asp-controller="Bookings" asp-action="Index">All Bookings</a>
                                 </div>
                             </li>
                         }
@@ -83,7 +83,24 @@
     <script src="~/lib/popper/popper.min.js"></script>
     <script src="~/js/lazy.js"></script>
 
-
+    <environment names="Development">
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    </environment>
+    <environment names="Staging,Production">
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"
+                asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.validator"
+                crossorigin="anonymous"
+                integrity="sha384-rZfj/ogBloos6wzLGpPkkOr/gpkBNLZ6b6yLy4o+ok+t/SAKlL5mvXLr0OXNi1Hp">
+        </script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.9/jquery.validate.unobtrusive.min.js"
+                asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive"
+                crossorigin="anonymous"
+                integrity="sha384-ifv0TYDWxBHzvAk2Z0n8R434FL1Rlv/Av18DXE43N/1rvHyOG4izKst0f2iSLdds">
+        </script>
+    </environment>
 
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
