--- a/Web/EasyTravel.Web/Areas/Administration/Views/Bookings/Edit.cshtml
+++ b/Web/EasyTravel.Web/Areas/Administration/Views/Bookings/Edit.cshtml
@@ -74,6 +74,6 @@
     <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
