Add bew viewModel for all reviews

--- a/Web/EasyTravel.Web/Views/Properties/ById.cshtml
+++ b/Web/EasyTravel.Web/Views/Properties/ById.cshtml
@@ -159,6 +159,10 @@
 
         <hr />
 
+        @*@foreach (var review in this.Model.Reviews)
+        {
+            <h2>@review.Content</h2>
+        }*@
         <div class="card">
             <div class="block-text rel zmin">
                 <a title="" href="#">Hercules</a>
