--- a/Web/EasyTravel.Web/Views/Reviews/CreateReview.cshtml
+++ b/Web/EasyTravel.Web/Views/Reviews/CreateReview.cshtml
@@ -26,11 +26,10 @@
                     <div class="comment-btns mt-2">
                         <div class="row">
                             <div class="col-6">
-                                <div class="pull-left"> <button class="btn btn-success btn-sm">Cancel</button> </div>
+                                <a class="btn btn-success" asp-area="" asp-controller="Bookings" asp-action="AllBookings">No! Go Back</a>
                             </div>
                             <div class="col-6">
-                                @*<div class="pull-right"> <button class="btn btn-success send btn-sm">Send <i class="fa fa-long-arrow-right ml-1"></i></button> </div>*@
-                                <button type="submit" class="btn btn-success send btn-sm">Send <i class="fa fa-long-arrow-right ml-1"></i></button>
+                                <button type="submit" class="btn btn-success send btn">Send <i class="fa fa-long-arrow-right ml-1"></i></button>
                             </div>
                         </div>
                     </div>
