--- a/Web/EasyTravel.Web/Views/Reviews/CreateReview.cshtml
+++ b/Web/EasyTravel.Web/Views/Reviews/CreateReview.cshtml
@@ -17,7 +17,7 @@
 
 
     <div class="row">
-        <div class="col-2"> <img src="https://i.imgur.com/xELPaag.jpg" width="70" class="rounded-circle mt-2"> </div>
+        <div class="col-2"> <img src="" width="70" class="rounded-circle mt-2"> </div>
         <div class="col-10">
             <div class="comment-box ml-2">
                 <h4>Add a review</h4>
