--- a/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/EasyTravel.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,10 @@
     <link href="~/css/jquery-ui.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/demo.css">
     <link rel="stylesheet" href="~/css/lazy.css">
-    @*<link href="~/css/jquery-ui.css" rel="stylesheet" />*@
+
+    <link href="~/plugings/OwlCarousel2-2.3.4/animate.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/plugings/OwlCarousel2-2.3.4/owl.carousel.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/plugings/OwlCarousel2-2.3.4/owl.theme.default.css" rel="stylesheet" asp-append-version="true" />
 
 
     <link rel="stylesheet" type="text/css"
@@ -90,6 +93,7 @@
         <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
         <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
+        <script src="~/plugings/OwlCarousel2-2.3.4/owl.carousel.js" asp-append-version="true"></script>
         <script src="~/lib/moment/min/moment-with-locales.min.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/lib/popper/popper.min.js"></script>
@@ -118,10 +122,11 @@
         <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
         <script src="~/lib/moment/min/moment-with-locales.min.js" asp-append-version="true"></script>
+        <script src="~/plugings/OwlCarousel2-2.3.4/owl.carousel.js" asp-append-version="true"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/lib/popper/popper.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-       
+
 
         <script src="~/js/lazy.js"></script>
 
