Write some XUnit tests for service test coverage

--- a/Web/EasyTravel.Web/Views/Bookings/AllBookings.cshtml
+++ b/Web/EasyTravel.Web/Views/Bookings/AllBookings.cshtml
@@ -42,7 +42,7 @@
 
 @if (@Model.MyBookings.Count() > 0)
 {
-    <h2>Upcoming (@Model.MyBookings.Count())</h2>
+    <h2>My Bookings (@Model.MyBookings.Count())</h2>
 
     <table class="table table-bordered table-striped">
         <thead class="thead-light">
