--- a/Web/EasyTravel.Web/Views/Home/Index.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Index.cshtml
@@ -8,34 +8,12 @@
 
 <div class="text-center">
 
-    @*<div class="header bg-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 ">
-                        <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-                        <p class="lead my-4">Design faster with this powerful and free Bootstrap 4 kit. <br /> Focus on the things that matter.</p>
-                        <form class="form-subscribe form-inline mb-3">
-                            <div class="form-group flex-grow-1">
-                                <label class="sr-only" for="email4">Email</label>
-                                <input type="text" class="form-control form-control-lg flex-grow-1 mr-2" id="email4" placeholder="Your email address...">
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-lg mt-0 mt-md-3 mt-lg-0">Subscribe</button>
-                        </form>
-                    </div>
-
-                </div>
-            </div>
-        </div>*@
 
     <section class="jumbotron" style="background: url('https://media-exp1.licdn.com/dms/image/C4D1BAQGGdNo6IlDOCQ/company-background_10000/0/1519801807380?e=2159024400&v=beta&t=VWHuXHsmYAXZB4XQn7H63FLLvHjjMfs6CdxCh3HwcCM') no-repeat center center fixed; background-size: cover; height:max-content; width:max-content">
         <div class="container">
             <h1 class="display-4 text-light">Welcome to @GlobalConstants.SystemName!</h1>
-            <p class="lead text-light">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p class="lead text-light">This is the right place if you love to travel or you are looking for new adventures. We offer you a hundred great  places <br> for your stay ! </p>
 
-
-            @*<p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-                </p>*@
         </div>
         <form asp-action="Search" class="row d-flex justify-content-center">
             <div class="col-6 pr-0">
@@ -122,8 +100,8 @@
                 <div class="col-12 col-md-4">
                     <div class="feature">
                         <div class="big-icon text-success"><i class="fas fa-palette"></i></div>
-                        <h5 class="text-success">Customise the Kit</h5>
-                        <p class="lead">Want to try different colours, spacing or typography? You can customise the Lazy Kit by modifying its SCSS files. </p>
+                        <h5 class="text-success">Customise your Booking</h5>
+                        <p class="lead">Want to pick different days, no problem you can easy cancel your booking? Want to contact us for more information about the policies no problem just Login/Register and pick Contact Us </p>
                     </div>
                 </div>
             </div>
