--- a/Web/EasyTravel.Web/Views/Contacts/Contact.cshtml
+++ b/Web/EasyTravel.Web/Views/Contacts/Contact.cshtml
@@ -22,12 +22,12 @@
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <div class="form-group">
                                 <label asp-for="FullName"></label>
-                                <input asp-for="FullName" class="form-control" />
+                                <input asp-for="FullName" class="form-control" value="@this.User.Identity.Name" />
                                 <span asp-validation-for="FullName" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Email"></label>
-                                <input asp-for="Email" class="form-control" value="@this.User.Identity.Name" />
+                                <input asp-for="Email" class="form-control"  />
                                 <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
                             <div class="form-group">
