--- a/Web/EasyTravel.Web/Views/Home/Privacy.cshtml
+++ b/Web/EasyTravel.Web/Views/Home/Privacy.cshtml
@@ -7,9 +7,35 @@
 
 <p>Use this page to detail your site's privacy policy.</p>
 
+<html xmlns="https://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Geocoding in Bing Maps</title>
+    <script type="text/javascript" src="https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.3"></script>
 
+    <script type="text/javascript">
+        var myMap = null;
 
-<div id="mapdiv" style="width: 300px; height: 300px;"></div>
+        function LoadMap() {
+            myMap = new VEMap("mapDiv");
+            myMap.LoadMap();
+
+            StartGeocoding("1 Microsoft Way, Redmond WA");
+        }
+
+        function UnloadMap() {
+            if (myMap != null) {
+                myMap.Dispose();
+            }
+        }
+    </script>
+</head>
+<body onload="LoadMap()" onunload="UnloadMap()">
+    <div style="position:relative;width:640px;height:480px;" id="mapDiv" />
+</body>
+</html>
+
+@*<div id="mapdiv" style="width: 300px; height: 300px;"></div>
 
     @section Scripts {
         <script>
@@ -31,4 +57,83 @@
             markers.addMarker(new OpenLayers.Marker(lonLat));
             map.setCenter(lonLat, zoom);
         </script>
+    }*@
+
+@*@model EasyTravel.Web.ViewModels.Home.LocationViewModel
+@{
+    ViewBag.Title = "Home Page";
+}
+
+<div class="jumbotron">
+    <h2>MAP INTEGRATION</h2>
+</div>
+
+<div class="row">
+    <div class="col-md-12 map">
+        <div id="myMap" style="width:100%; height:610px;"></div>
+    </div>
+</div>
+
+
+@section Scripts{
+    <script type='text/javascript'>
+
+    function loadMapScenario() {
+        var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
+            credentials: "FeXGylbidJHinLFlBZzTS6cKzpRbxadZHBjroftrhGCt-OCk3FD7DdThXL5zH",
+            mapTypeId: Microsoft.Maps.MapTypeId.road,
+            zoom: 5
+        });
+
+        // Create the infobox for the pushpin
+        var infobox = null;
+
+        //declare addMarker function
+        function addMarker(latitude, longitude, title, description, pid)
+        {
+            var marker = new Microsoft.Maps.Pushpin(new Microsoft.Maps.Location(latitude, longitude), { color: 'green' });
+
+            infobox = new Microsoft.Maps.Infobox(marker.getLocation(), {
+                visible : false
+            });
+
+            marker.metadata = {
+                id: pid,
+                title: title,
+                description: description
+            };
+
+            Microsoft.Maps.Events.addHandler(marker, 'mouseout', hideInfobox);
+            Microsoft.Maps.Events.addHandler(marker, 'mouseover', showInfobox);
+
+            infobox.setMap(map);
+            map.entities.push(marker);
+            marker.setOptions({ enableHoverStyle: true });
+        };
+
+        function showInfobox(e) {
+            if (e.target.metadata) {
+                infobox.setOptions({
+                    location: e.target.getLocation(),
+                    title: e.target.metadata.title,
+                    description: e.target.metadata.description,
+                    visible: true
+                });
+            }
+        }
+
+        function hideInfobox(e) {
+            infobox.setOptions({ visible: false });
+        }
+
+        //add markers to map
+        @if (Model.Title != null)
+        {  
+            @:addMarker(@Model.Latitude, @Model.Longitude, '@Model.Title', '@Model.Description', @Model.LocationId);
+            
+        }
     }
+    </script>
+    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
+
+}*@
